Configure PermGen space to be bigger.